--- a/index.html
+++ b/index.html
@@ -75,59 +75,91 @@
             <div class="swiper banneranime">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide box">
-                        <div class="image">
-                            <img src="img/img1.png" alt="">
+                        <div class="contentBx">
+                            <div class="image">
+                                <img src="img/img1.png" alt="">
+                                <div class="overlay"></div>
+                            </div>
                         </div>
                         <div class="content">
-                            <h4>ahimhgeki1</h4>
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
                         </div>
                     </div>
                     <div class="swiper-slide box">
-                        <div class="image">
-                            <img src="img/img1.png" alt="">
+                        <div class="contentBx">
+                            <div class="image">
+                                <img src="img/img1.png" alt="">
+                                <div class="overlay"></div>
+                            </div>
                         </div>
                         <div class="content">
-                            <h4>ahimhgeki2</h4>
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
                         </div>
                     </div>
                     <div class="swiper-slide box">
-                        <div class="image">
-                            <img src="img/img1.png" alt="">
+                        <div class="contentBx">
+                            <div class="image">
+                                <img src="img/img1.png" alt="">
+                                <div class="overlay"></div>
+                            </div>
                         </div>
                         <div class="content">
-                            <h4>ahimhgeki3</h4>
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
                         </div>
                     </div>
                     <div class="swiper-slide box">
-                        <div class="image">
-                            <img src="img/img1.png" alt="">
+                        <div class="contentBx">
+                            <div class="image">
+                                <img src="img/img1.png" alt="">
+                                <div class="overlay"></div>
+                            </div>
                         </div>
                         <div class="content">
-                            <h4>ahimhgeki4</h4>
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
                         </div>
                     </div>
                     <div class="swiper-slide box">
-                        <div class="image">
-                            <img src="img/img1.png" alt="">
+                        <div class="contentBx">
+                            <div class="image">
+                                <img src="img/img1.png" alt="">
+                                <div class="overlay"></div>
+                            </div>
                         </div>
                         <div class="content">
-                            <h4>ahimhgeki5</h4>
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
                         </div>
                     </div>
                     <div class="swiper-slide box">
-                        <div class="image">
-                            <img src="img/img1.png" alt="">
+                        <div class="contentBx">
+                            <div class="image">
+                                <img src="img/img1.png" alt="">
+                                <div class="overlay"></div>
+                            </div>
                         </div>
                         <div class="content">
-                            <h4>ahimhgeki6</h4>
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
                         </div>
                     </div>
                     <div class="swiper-slide box">
-                        <div class="image">
-                            <img src="img/img1.png" alt="">
+                        <div class="contentBx">
+                            <div class="image">
+                                <img src="img/img1.png" alt="">
+                                <div class="overlay"></div>
+                            </div>
                         </div>
                         <div class="content">
-                            <h4>ahimhgeki7</h4>
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
+                        </div>
+                    </div>
+                    <div class="swiper-slide box">
+                        <div class="contentBx">
+                            <div class="image">
+                                <img src="img/img1.png" alt="">
+                                <div class="overlay"></div>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
                         </div>
                     </div>
                 </div>
