--- a/index.html
+++ b/index.html
@@ -72,94 +72,72 @@
         <div class="contentBanner">
             <h3>anime winter</h3>
 
-            <div class="swiper banneranime">
+            <div class="swiper bannerAnime">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide box">
-                        <div class="contentBx">
-                            <div class="image">
-                                <img src="img/img1.png" alt="">
-                                <div class="overlay"></div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
                             </div>
                         </div>
-                        <div class="content">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
+                        <div class="contentText">
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
                         </div>
                     </div>
-                    <div class="swiper-slide box">
-                        <div class="contentBx">
-                            <div class="image">
-                                <img src="img/img1.png" alt="">
-                                <div class="overlay"></div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
                             </div>
                         </div>
-                        <div class="content">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
+                        <div class="contentText">
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
                         </div>
                     </div>
-                    <div class="swiper-slide box">
-                        <div class="contentBx">
-                            <div class="image">
-                                <img src="img/img1.png" alt="">
-                                <div class="overlay"></div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
                             </div>
                         </div>
-                        <div class="content">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
+                        <div class="contentText">
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
                         </div>
                     </div>
-                    <div class="swiper-slide box">
-                        <div class="contentBx">
-                            <div class="image">
-                                <img src="img/img1.png" alt="">
-                                <div class="overlay"></div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
                             </div>
                         </div>
-                        <div class="content">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
+                        <div class="contentText">
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
                         </div>
                     </div>
-                    <div class="swiper-slide box">
-                        <div class="contentBx">
-                            <div class="image">
-                                <img src="img/img1.png" alt="">
-                                <div class="overlay"></div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
                             </div>
                         </div>
-                        <div class="content">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
+                        <div class="contentText">
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
                         </div>
                     </div>
-                    <div class="swiper-slide box">
-                        <div class="contentBx">
-                            <div class="image">
-                                <img src="img/img1.png" alt="">
-                                <div class="overlay"></div>
+                    <div class="swiper-slide boxContent">
+                        <div class="contentImg">
+                            <img src="img/img1.png" alt="">
+                            <div class="overlay ">
+                                <span><i class="fas fa-play"></i></span>
                             </div>
                         </div>
-                        <div class="content">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
-                        </div>
-                    </div>
-                    <div class="swiper-slide box">
-                        <div class="contentBx">
-                            <div class="image">
-                                <img src="img/img1.png" alt="">
-                                <div class="overlay"></div>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
-                        </div>
-                    </div>
-                    <div class="swiper-slide box">
-                        <div class="contentBx">
-                            <div class="image">
-                                <img src="img/img1.png" alt="">
-                                <div class="overlay"></div>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aperiam?</h4>
+                        <div class="contentText">
+                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
                         </div>
                     </div>
                 </div>
