--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                             </div>
                         </div>
                         <div class="contentText">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
+                            <h4>one piece</h4>
+                            <p>ongoing</p>
                         </div>
                     </div>
                     <div class="swiper-slide boxContent">
@@ -93,7 +94,8 @@
                             </div>
                         </div>
                         <div class="contentText">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
+                            <h4>boruto the next generation</h4>
+                            <p>ongoing</p>
                         </div>
                     </div>
                     <div class="swiper-slide boxContent">
@@ -104,7 +106,8 @@
                             </div>
                         </div>
                         <div class="contentText">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
+                            <h4>kimetsu no yaiba</h4>
+                            <p>ongoing</p>
                         </div>
                     </div>
                     <div class="swiper-slide boxContent">
@@ -115,7 +118,8 @@
                             </div>
                         </div>
                         <div class="contentText">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
+                            <h4>sono bisque doll wa koi wo suru</h4>
+                            <p>ongoing</p>
                         </div>
                     </div>
                     <div class="swiper-slide boxContent">
@@ -126,7 +130,8 @@
                             </div>
                         </div>
                         <div class="contentText">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
+                            <h4>shikkakumon no saikyou kenja</h4>
+                            <p>ongoing</p>
                         </div>
                     </div>
                     <div class="swiper-slide boxContent">
@@ -137,7 +142,8 @@
                             </div>
                         </div>
                         <div class="contentText">
-                            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, harum?</h4>
+                            <h4>arifureta shokuguyo de sekai saiyou season2</h4>
+                            <p>ongoing</p>
                         </div>
                     </div>
                 </div>
