--- a/index.html
+++ b/index.html
@@ -154,7 +154,74 @@
 
         <div class="contentSider">
             <h3>anime terlaris</h3>
+
+            <div class="siderAnime">
+                <div class="content">
+                    <div class="image">
+                        <img src="img/img2.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>dragonball heroes</h4>
+                        <h5>genres : <span>comedy, fantasy</span></h5>
+                        <p>jul, 1, 2022</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="image">
+                        <img src="img/img2.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>dragonball heroes</h4>
+                        <h5>genres : <span>comedy, fantasy</span></h5>
+                        <p>jul, 1, 2022</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="image">
+                        <img src="img/img2.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>dragonball heroes</h4>
+                        <h5>genres : <span>comedy, fantasy</span></h5>
+                        <p>jul, 1, 2022</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="image">
+                        <img src="img/img2.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>dragonball heroes</h4>
+                        <h5>genres : <span>comedy, fantasy</span></h5>
+                        <p>jul, 1, 2022</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="image">
+                        <img src="img/img2.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>dragonball heroes</h4>
+                        <h5>genres : <span>comedy, fantasy</span></h5>
+                        <p>jul, 1, 2022</p>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="image">
+                        <img src="img/img2.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>dragonball heroes</h4>
+                        <h5>genres : <span>comedy, fantasy</span></h5>
+                        <p>jul, 1, 2022</p>
+                    </div>
+                </div>
+            </div>
         </div>
+    </section>
+
+    <section class="secondBanner">
+        <p>sfdhjsdhf</p>
     </section>
 
 
