--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                             <div class="overlay ">
                                 <span><i class="fas fa-play"></i></span>
                             </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
+                            </div>
                         </div>
                         <div class="contentText">
                             <h4>one piece</h4>
@@ -91,6 +95,10 @@
                             <img src="img/img1.png" alt="">
                             <div class="overlay ">
                                 <span><i class="fas fa-play"></i></span>
+                            </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
                             </div>
                         </div>
                         <div class="contentText">
@@ -104,6 +112,10 @@
                             <div class="overlay ">
                                 <span><i class="fas fa-play"></i></span>
                             </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
+                            </div>
                         </div>
                         <div class="contentText">
                             <h4>kimetsu no yaiba</h4>
@@ -115,6 +127,10 @@
                             <img src="img/img1.png" alt="">
                             <div class="overlay ">
                                 <span><i class="fas fa-play"></i></span>
+                            </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
                             </div>
                         </div>
                         <div class="contentText">
@@ -128,6 +144,10 @@
                             <div class="overlay ">
                                 <span><i class="fas fa-play"></i></span>
                             </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
+                            </div>
                         </div>
                         <div class="contentText">
                             <h4>shikkakumon no saikyou kenja</h4>
@@ -139,6 +159,10 @@
                             <img src="img/img1.png" alt="">
                             <div class="overlay ">
                                 <span><i class="fas fa-play"></i></span>
+                            </div>
+                            <div class="rating">
+                                <span class="tv">tv</span>
+                                <span class="tv"><i class="fas fa-star"></i>7.5</span>
                             </div>
                         </div>
                         <div class="contentText">
@@ -221,7 +245,26 @@
     </section>
 
     <section class="secondBanner">
-        <p>sfdhjsdhf</p>
+        <div class="secondContent">
+            <div class="swiper box">
+                <div class="swiper-wrapper contentBx">
+                    <div class="swiper-slide images">
+                        <img src="img/img3.png" alt="">
+                    </div>
+                    <div class="swiper-slide images">
+                        <img src="img/img3.png" alt="">
+                    </div>
+                    <div class="swiper-slide images">
+                        <img src="img/img3.png" alt="">
+                    </div>
+                    <div class="swiper-slide images">
+                        <img src="img/img3.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="scondbannerhide"></div> -->
     </section>
 
 
