--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     <section class="bannerTop">
         <div class="contentBanner">
             <h3>anime winter</h3>
+            <div class="cprevnext1">
+                <span><a href=""><i class="fas fa-chevron-left"></i></a></span>
+                <span><a href=""><i class="fas fa-chevron-right"></i></a></span>
+            </div>
 
             <div class="swiper bannerAnime">
                 <div class="swiper-wrapper">
