--- a/index.html
+++ b/index.html
@@ -253,17 +253,56 @@
             <div class="swiper box">
                 <div class="swiper-wrapper contentBx">
                     <div class="swiper-slide images">
+                        <span class="label">tv</span>
                         <img src="img/img3.png" alt="">
+                        <div class="watch">
+                            <span></span>
+                            <span>one piece</span>
+                            <span><i class="fas fa-star">8.10</i></span>
+                            <span>tonton sekarang</span>
+                        </div>
                     </div>
                     <div class="swiper-slide images">
+                        <span class="label">tv</span>
                         <img src="img/img3.png" alt="">
+                        <div class="watch">
+                            <span></span>
+                            <span>one piece</span>
+                            <span><i class="fas fa-star">8.10</i></span>
+                            <span>tonton sekarang</span>
+                        </div>
                     </div>
                     <div class="swiper-slide images">
+                        <span class="label">tv</span>
                         <img src="img/img3.png" alt="">
+                        <div class="watch">
+                            <span></span>
+                            <span>one piece</span>
+                            <span><i class="fas fa-star">8.10</i></span>
+                            <span>tonton sekarang</span>
+                        </div>
                     </div>
                     <div class="swiper-slide images">
+                        <span class="label">tv</span>
                         <img src="img/img3.png" alt="">
+                        <div class="watch">
+                            <span></span>
+                            <span>one piece</span>
+                            <span><i class="fas fa-star">8.10</i></span>
+                            <span>tonton sekarang</span>
+                        </div>
                     </div>
+                    <div class="swiper-slide images">
+                        <span class="label">tv</span>
+                        <img src="img/img3.png" alt="">
+                        <div class="watch">
+                            <span></span>
+                            <span>one piece</span>
+                            <span><i class="fas fa-star">8.10</i></span>
+                            <span>tonton sekarang</span>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
