--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                         <p>jul, 1, 2022</p>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -306,8 +307,114 @@
                 </div>
             </div>
         </div>
+    </section>
 
-        <!-- <div class="scondbannerhide"></div> -->
+    <section class="listAnime" id="listAnime">
+        <h3>episode terbaru</h3>
+
+        <div class="lists">
+            <div class="content">
+                <div class="images">
+                    <img src="img/img4.png" alt="">
+                </div>
+                <div class="textContent">
+                    <h3>Futsal Boys</h3>
+                    <h4>episode 5</h4>
+                    <h5>posted by:sans</h5>
+                    <h6>relased on : 8 jam yang lalu</h6>
+                </div>
+            </div>
+            <div class="content">
+                <div class="images">
+                    <img src="img/img4.png" alt="">
+                </div>
+                <div class="textContent">
+                    <h3>Futsal Boys</h3>
+                    <h4>episode 5</h4>
+                    <h5>posted by:sans</h5>
+                    <h6>relased on : 8 jam yang lalu</h6>
+                </div>
+            </div>
+            <div class="content">
+                <div class="images">
+                    <img src="img/img4.png" alt="">
+                </div>
+                <div class="textContent">
+                    <h3>Futsal Boys</h3>
+                    <h4>episode 5</h4>
+                    <h5>posted by:sans</h5>
+                    <h6>relased on : 8 jam yang lalu</h6>
+                </div>
+            </div>
+            <div class="content">
+                <div class="images">
+                    <img src="img/img4.png" alt="">
+                </div>
+                <div class="textContent">
+                    <h3>Futsal Boys</h3>
+                    <h4>episode 5</h4>
+                    <h5>posted by:sans</h5>
+                    <h6>relased on : 8 jam yang lalu</h6>
+                </div>
+            </div>
+            <div class="content">
+                <div class="images">
+                    <img src="img/img4.png" alt="">
+                </div>
+                <div class="textContent">
+                    <h3>Futsal Boys</h3>
+                    <h4>episode 5</h4>
+                    <h5>posted by:sans</h5>
+                    <h6>relased on : 8 jam yang lalu</h6>
+                </div>
+            </div>
+            <div class="content">
+                <div class="images">
+                    <img src="img/img4.png" alt="">
+                </div>
+                <div class="textContent">
+                    <h3>Futsal Boys</h3>
+                    <h4>episode 5</h4>
+                    <h5>posted by:sans</h5>
+                    <h6>relased on : 8 jam yang lalu</h6>
+                </div>
+            </div>
+            <div class="content">
+                <div class="images">
+                    <img src="img/img4.png" alt="">
+                </div>
+                <div class="textContent">
+                    <h3>Futsal Boys</h3>
+                    <h4>episode 5</h4>
+                    <h5>posted by:sans</h5>
+                    <h6>relased on : 8 jam yang lalu</h6>
+                </div>
+            </div>
+            <div class="content">
+                <div class="images">
+                    <img src="img/img4.png" alt="">
+                </div>
+                <div class="textContent">
+                    <h3>Futsal Boys</h3>
+                    <h4>episode 5</h4>
+                    <h5>posted by:sans</h5>
+                    <h6>relased on : 8 jam yang lalu</h6>
+                </div>
+            </div>
+            <div class="content">
+                <div class="images">
+                    <img src="img/img4.png" alt="">
+                </div>
+                <div class="textContent">
+                    <h3>Futsal Boys</h3>
+                    <h4>episode 5</h4>
+                    <h5>posted by:sans</h5>
+                    <h6>relased on : 8 jam yang lalu</h6>
+                </div>
+            </div>
+        </div>
+
+        <div class="dichie"></div>
     </section>
 
 
