--- a/index.html
+++ b/index.html
@@ -394,8 +394,116 @@
                         <p>released on 1, 1, 2021</p>
                     </div>
                 </div>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
+                </div>
+            </div>
+            <div class="paging">
+                <ul>
+                    <li>page 1 of 147</li>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                    <li>6</li>
+                    <li>7</li>
+                    <li>8</li>
+                </ul>
             </div>
         </div>
+    </section>
+
+    <section class="listAnime">
+        <div class="contentAnime">
+            <h3>latest batch</h3>
+            <div class="contentBox">
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojinkjkjkjkjkjkjdsfsfsfsffhjhjhjhjhj</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="images">
+                        <img src="img/img4.png" alt="">
+                    </div>
+                    <div class="contentText">
+                        <h4>Shingeki No Kyoojin</h4>
+                        <h5>episode 5</h5>
+                        <h6>posted by : nuryana</h6>
+                        <p>released on 1, 1, 2021</p>
+                    </div>
+                </div>
+            </div>
     </section>
 
 
