--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
             <!-- hidden navbar -->
         </div>
     </header>
+
+    <!-- HIden search -->
+    <div class="hiddenSearch">
+        <ul>
+            <li><input type="text" placeholder="Pencarian"><i class="fas fa-search"></i></li>
+        </ul>
+    </div>
+
     <div class="sidenav">
         <ul>
             <li><a href="">daftar anime</a></li>
