--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="navbar">
                 <ul>
-                    <li><a href="">daftar anime</a></li>
+                    <li><a href="list_anime.html">daftar anime</a></li>
                     <li><a href="">anime terpopuler</a></li>
                     <li><a href="">index batch</a></li>
                     <li><a href="">anime musim dingin 2022</a></li>
@@ -56,7 +56,7 @@
 
     <div class="sidenav">
         <ul>
-            <li><a href="">daftar anime</a></li>
+            <li><a href="list_anime.html">daftar anime</a></li>
             <li><a href="">anime terpopuler</a></li>
             <div class="listAnime">
                 <ul>
@@ -262,7 +262,7 @@
             <div class="swiper box">
                 <div class="swiper-wrapper contentBx">
                     <div class="swiper-slide images">
-                        <img src="img/img3.png" alt="">
+                        <img src="img/img5.png" alt="">
                         <div class="overlayGradient"></div>
                         <span class="label">tv</span>
                         <div class="watch">
@@ -284,7 +284,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide images">
-                        <img src="img/img3.png" alt="">
+                        <img src="img/img6.png" alt="">
                         <div class="overlayGradient"></div>
                         <span class="label">tv</span>
                         <div class="watch">
@@ -514,7 +514,7 @@
             </div>
     </section>
 
-    <section class="bannerTop">
+    <section class="bannerTop bannerBottom">
         <div class="contentBanner">
             <h3>anime movie</h3>
             <div class="cprevnext1">
