--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                         <div class="contentText">
-                            <h4>one piece</h4>
+                            <h4><a href="anime.html">one piece</a></h4>
                             <p>ongoing</p>
                         </div>
                     </div>
