--- a/list_anime.html
+++ b/list_anime.html
@@ -22,7 +22,7 @@
                 <div class="bars3"></div>
             </div>
 
-            <a href="" class="logo">yanz_Nime</a>
+            <a href="index.html" class="logo">yanz_Nime</a>
 
             <ul class="search">
                 <li><input type="text" placeholder="Pencarian"><i class="fas fa-search"></i></li>
