--- a/anime.html
+++ b/anime.html
@@ -235,6 +235,20 @@
         </div>
     </section>
 
+    <section class="video">
+        <div class="videos">
+            <video src="vid1.mp4" autoplay></video>
+            <div class="frontOver">
+                <span><i class="fas fa-star">フットサルボーイズ!!!!!</i></span>
+                <span><i class="fas fa-star">tonton nanti</i></span>
+                <span><i class="fas fa-star">bagikan</i></span>
+                <span><i class="fab fa-youtube-square"></i></span>
+                <span><i class="fas fa-star">tonton di youtube</i></span>
+                <span><i class="fas fa-star">h</i></span>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
