--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="list_anime.html">daftar anime</a></li>
                     <li><a href="">anime terpopuler</a></li>
                     <li><a href="">index batch</a></li>
-                    <li><a href="">anime musim dingin 2022</a></li>
+                    <li><a href="season.html">anime musim dingin 2022</a></li>
                 </ul>
             </div>
 
